# robot-framework-101

./: .gitignore  LICENSE  README.md  pyproject.toml
libraries/api/: api_client.py
libraries/db/: mongo_database.py
libraries/utils/: env_loader.py
resource/: common.resource  env.resource
test_suites/api_test/: api_test.robot
test_suites/db_test/: db_test.robot
test_suites/env_test/: load_env_test.robot
test_suites/multiple_suites/: 01_tests.robot  02_tests.robot  __init__.robot
test_suites/test_template/: template.robot
